--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9496,144 +9496,26 @@ input[type="color"].form-control:disabled {
   z-index: 500;
   background-color: #d4e3f1 !important;
   box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08) !important;
-  color: #fff !important;
-  font-size: 1rem !important; }
+  color: #737373 !important;
+  font-size: 1rem !important;
+  transition: all 1s; }
+
+.navbar-brand {
+  color: #737373 !important; }
 
 .nav-link {
-  color: #fff !important;
-  border-right: 1px solid #fff; }
+  color: #737373 !important; }
 
 .navbar-nav {
   margin-left: 2rem; }
 
-@media (max-width: 576px) {
-  .nav-link {
-    border-right: none; } }
+.bt-rdv-nav a {
+  color: #737373 !important; }
 
-/* ul {
-    margin-bottom: 0;
-  }
+.navbar--hidden {
+  box-shadow: none;
+  transform: translate3d(0, -100%, 0); }
 
-  &--left {
-    align-self: center;
-    margin-left: 1rem;
-    letter-spacing: 2px;
-    &--1{
-      font-size: 1.25rem;
-      margin-bottom: 7px;
-    }
-    &--2 {
-      font-size: 1.25rem;
-      margin-bottom: 7px;
-    }
-
-    &--3 {
-      font-size: 0.8rem;
-      margin-bottom: 0;
-    }
-  }
-
-  &--center {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    text-align: center;
-    align-self: center;
-    font-size: 0.8rem;
-    margin-bottom: 0;
-    letter-spacing: 2px;
-
-    a, a:hover {
-      color: #fff;
-      text-decoration: none;
-      display: inline-block;
-      position: relative;
-    }
-
-    &--link {
-      margin-right: 2rem;
-      &:after {
-        margin-top: 0.25rem;
-        text-align: center;
-        content: '';
-        display: block;
-        background: #fff;
-        width: 30%;
-        height: 2px;
-        opacity: 0.5;
-        margin-left: 50%;
-        transform: translateX(-50%);
-        transition: width .3s, opacity .3s;
-      }
-
-      &:hover:after {
-        margin-left: 50%;
-        transform: translateX(-50%);
-        width: 80%;
-        transition: width .25s;
-        opacity: 1;
-      }
-    }
-  }
-  &--right{
-    text-align: right;
-    align-self: center;
-    letter-spacing: 2px;
-    margin-right: 5rem;
-    border: 1px solid #ffffff;
-    border-radius:25px;
-    padding: 1rem 2rem;
-    color: #b5c5d3;
-    box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
-    transition: all .4s ;
-    p{
-      margin-bottom: 0;
-    }
-    &:hover {
-      background-color: #ffffff;
-      transform: translateY(-3px);
-      a{
-        color: #b5c5d3;
-      }
-      &:active{
-        transform: translateY(3px);
-
-      }
-    }
-  }
-  li {
-    text-decoration: none;
-    display: inline-block;
-  }
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  width: 22rem;
-
-  a {
-    color: #b5c5d3;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    &:hover{
-      background-color: #ddd;
-      width: 100%;
-    }
-  }
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-*/
 .cabinet--navbar {
   display: flex;
   justify-content: space-between;
@@ -9747,27 +9629,135 @@ input[type="color"].form-control:disabled {
 .dropdown:hover .dropdown-content {
   display: block; }
 
-#footer {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  background-color: rgba(181, 197, 211, 0.9); }
+.site-footer {
+  background-color: #d4e3f1;
+  padding: 20px 0 10px;
+  font-size: 10px;
+  line-height: 24px;
+  color: #737373; }
 
-.footer--container {
-  text-align: center; }
-  .footer--container__top {
-    margin-top: 1rem;
-    color: #666; }
-  .footer--container__medium {
-    margin-bottom: 1rem; }
-    .footer--container__medium--icon {
-      height: 2rem;
-      padding: 0 0.5rem; }
-  .footer--container__link {
-    display: inline-block;
-    padding: 0 0.5rem; }
-  .footer--container__bottom--text {
-    font-size: 0.8rem; }
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5; }
+
+.site-footer hr.small {
+  margin: 20px 0; }
+
+.site-footer h6 {
+  color: #fff;
+  font-size: 10px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px; }
+
+.site-footer a {
+  color: #737373;
+  font-size: 9px; }
+
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none; }
+
+.footer-links {
+  padding-left: 0;
+  list-style: none; }
+
+.footer-links li {
+  display: block; }
+
+.footer-links a {
+  color: #737373; }
+
+.footer-links a:active, .footer-links a:focus, .footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none; }
+
+.footer-links.inline li {
+  display: inline-block; }
+
+.site-footer .social-icons {
+  text-align: right; }
+
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d; }
+
+.copyright-text {
+  margin: 0; }
+
+@media (max-width: 991px) {
+  .site-footer [class^=col-] {
+    margin-bottom: 30px; } }
+
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0; }
+  .site-footer .copyright-text, .site-footer .social-icons {
+    text-align: center; } }
+
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none; }
+
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px; }
+
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px; }
+
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear; }
+
+.social-icons a:active, .social-icons a:focus, .social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe; }
+
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px; }
+
+.social-icons a.facebook:hover {
+  background-color: #3b5998; }
+
+.social-icons a.twitter:hover {
+  background-color: #00aced; }
+
+.social-icons a.linkedin:hover {
+  background-color: #007bb6; }
+
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89; }
+
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600; } }
 
 .cover {
   width: 20%;
@@ -10176,7 +10166,9 @@ li {
   line-height: 1.75rem; }
   .author__box p {
     color: #666666;
-    font-weight: 400; }
+    font-weight: 300;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif; }
   .author__box a {
     color: #666; }
     .author__box a:hover {
@@ -10227,7 +10219,9 @@ li {
     justify-content: space-between; }
   .author__box li {
     list-style: none;
-    font-weight: 400; }
+    font-weight: 300;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif; }
 
 .author--book {
   margin-left: 1rem; }
@@ -10313,9 +10307,13 @@ li {
 
 .btn-custom {
   background-color: #d4e3f1;
-  border-color: transparent !important; }
+  border-color: transparent !important;
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12), 0 0 0 rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
   .btn-custom:hover {
-    background-color: rgba(255, 255, 255, 0.8); }
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.18), 0 10px 10px rgba(0, 0, 0, 0.14);
+    background-color: #9bbdd6;
+    color: #666666 !important; }
 
 .wrapper {
   max-width: 90% !important; }
