--- a/src/assets/sass/page/author-page.scss
+++ b/src/assets/sass/page/author-page.scss
@@ -9,7 +9,9 @@ text-align: center;
 
   p{
     color: #666666;
-    font-weight: 400;
+    font-weight: 300;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
   }
   a{
     color: #666;
@@ -83,7 +85,9 @@ text-align: center;
   }
   li{
     list-style: none;
-    font-weight: 400;
+    font-weight: 300;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
   }
 }
 .author--book{
