--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -33,8 +33,13 @@
 .btn-custom{
   background-color: #d4e3f1;
   border-color: transparent!important;
+  box-shadow:0 6px 14px rgba(0,0,0,0.12), 0 0 0 rgba(0,0,0,0.24) ;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
   &:hover{
-    background-color: rgba(255,255,255,0.8);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.18), 0 10px 10px rgba(0,0,0,0.14);
+    background-color: #9bbdd6;
+    color: #666666!important;
   }
 }
 
