--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -23,6 +23,7 @@
   border-radius: 5px;
   box-shadow: 0 7px 30px rgba(0,0,0,0.1);
   padding-bottom: 2rem;
+  background-color: white;
 }
 .cabinet-header{
   padding-top: 2rem;
