--- a/src/assets/sass/page/reasons.scss
+++ b/src/assets/sass/page/reasons.scss
@@ -70,6 +70,8 @@
 
   &:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.18), 0 10px 10px rgba(0,0,0,0.14);
-
   }
+}
+.reason-video{
+  max-width: 500px;
 }
