--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -1,10 +1,15 @@
 .site-footer
 {
+  border-top: 1px solid #ffffff;
   background-color:#d4e3f1 ;
   padding:20px 0 10px;
   font-size:10px;
   line-height:24px;
   color:#737373;
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12), 0 0 0 rgba(0, 0, 0, 0.24);
+}
+.site-footer p{
+  font-size: 13px;
 }
 .site-footer hr
 {
@@ -18,7 +23,7 @@
 .site-footer h6
 {
   color:#fff;
-  font-size:10px;
+  font-size:12px;
   text-transform:uppercase;
   margin-top:5px;
   letter-spacing:2px
@@ -26,7 +31,7 @@
 .site-footer a
 {
   color:#737373;
-  font-size: 9px;
+  font-size: 11px;
 }
 .site-footer a:hover
 {
