--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -17,16 +17,20 @@
 .cabinet-content {
   display: flex;
   flex-direction: row;
+  padding-top: 2rem;
 }
 
 #cabinet-background{
   border-radius: 5px;
-  box-shadow: 0 7px 30px rgba(0,0,0,0.1);
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12), 0 0 0 rgba(0, 0, 0, 0.24);
   padding-bottom: 2rem;
   background-color: white;
+  margin: 0 2rem 0 2rem;
 }
+.box--header{
+     margin-top: 2rem!important;
+   }
 .cabinet-header{
-  padding-top: 2rem;
   margin-left: 3rem;
   margin-bottom: 2rem;
 }
