--- a/src/assets/sass/layout/navbar.scss
+++ b/src/assets/sass/layout/navbar.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   top: 0!important;
-  width: 100vw!important;
+  width: 100%!important;
   position: fixed !important;
   z-index: 500;
   background-color: #d4e3f1 !important;
