--- a/src/assets/sass/page/reasons.scss
+++ b/src/assets/sass/page/reasons.scss
@@ -10,15 +10,9 @@
   color:#666666!important;
 }
 
-#sidebar-1{
-    width: 620px;
-  }
+.b-sidebar{
+  width: 620px!important;
 
-#sidebar-2{
-  width: 620px;
-}
-#sidebar-3{
-  width: 620px;
 }
 
 .reason-modal{
