--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10084,6 +10084,8 @@ body {
 a {
   text-decoration: none !important;
   color: #fff; }
+  a:hover {
+    color: #fff; }
 
 ul,
 li {
@@ -10162,6 +10164,15 @@ li {
 
 .down-arrow {
   width: 40px; }
+
+.book-btn {
+  background-color: #815D5A;
+  border: none;
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12), 0 0 0 rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+  .book-btn:hover {
+    background-color: #B15F4F;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.18), 0 10px 10px rgba(0, 0, 0, 0.14); }
 
 @media (max-width: 992px) {
   .cd-next {
