--- a/src/assets/sass/page/book-page.scss
+++ b/src/assets/sass/page/book-page.scss
@@ -67,6 +67,19 @@
 .down-arrow{
   width: 40px;
 }
+.book-btn{
+  background-color: #815D5A;
+  border: none;
+  box-shadow:0 6px 14px rgba(0,0,0,0.12), 0 0 0 rgba(0,0,0,0.24) ;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) ;
+  &:hover{
+    background-color: #B15F4F;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.18), 0 10px 10px rgba(0,0,0,0.14);
+  }
+  a{
+
+  }
+}
 @media (max-width: 992px) {
   .cd-next{
     display: none ;
